[package]
name = "chat-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "c"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
shell-words = "1.1.0"
termimad = "0.33.0"
ureq = { version = "3.0.12", features = ["json"] }
